--- a/Assignment-1/code/index.html
+++ b/Assignment-1/code/index.html
@@ -15,7 +15,7 @@
     <script type="text/babel">
       const UiSheet = ({ props }) => {
       return (
-        <div class="container">
+        <div class="responsive">
           <div class="row yellow">
             <div class="box">
             </div>
@@ -37,6 +37,7 @@
         </div>
       );
     }
+      
       
 //React Code here
  ReactDOM.render(<div></div>,document.getElementById('root'));
