myassignment_react1_done

--- a/Assignment-1/code/index.html
+++ b/Assignment-1/code/index.html
@@ -15,7 +15,7 @@
     <script type="text/babel">
       const UiSheet = ({ props }) => {
       return (
-        <div class="responsive">
+        <div class="mould">
           <div class="row yellow">
             <div class="box">
             </div>
@@ -40,7 +40,7 @@
       
       
 //React Code here
- ReactDOM.render(<div></div>,document.getElementById('root'));
+ ReactDOM.render(<UiSheet></UiSheet>,document.getElementById('root'));
 
 </script>
 <!--
